--- a/pom.xml
+++ b/pom.xml
@@ -52,3 +52,8 @@
 
 
 </project>
+<!--git的使用：idea上方版本控制工具，创建git仓库  此时文件为红色，表示未添加到暂存区
+对项目右键 git -> 添加 可以把整个项目的文件（除被忽略的文件格式）添加到暂存区，此时文件为绿色，表示已添加到暂存区
+再右键git -> 提交 输入提交信息后 文件变为黑色
+一旦文件再次修改 文件将变为蓝色
+-->
