--- a/pom.xml
+++ b/pom.xml
@@ -56,4 +56,6 @@
 对项目右键 git -> 添加 可以把整个项目的文件（除被忽略的文件格式）添加到暂存区，此时文件为绿色，表示已添加到暂存区
 再右键git -> 提交 输入提交信息后 文件变为黑色
 一旦文件再次修改 文件将变为蓝色
+提交：保存到暂存区
+推送：推送到远程仓库github
 -->
